--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+package-lock.json
 
 .idea
+*.npmrc
+*.npmrc1
 
 # Runtime data
 pids
@@ -71,8 +74,9 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
+.env1
+.env1
 .env
-.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
