--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.1",
     "@nestled/config": "^2.3.8",
+    "axios": "^0.21.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "colorthief": "^2.3.2",
     "dotenv": "^10.0.0",
-    "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
